enum-ptr-tests/tests/fail/not_single_field.stderr
error: EnumPtr only supports single field
 --> $DIR/not_single_field.rs:9:5
  |
9 |     B(&'b i32, *const i32),
  |     ^

error: EnumPtr only supports single field
  --> $DIR/not_single_field.rs:16:5
   |
16 |     B,
   |     ^
